// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mobile theme button theme snap 1`] = `
Object {
  "defaultProps": Object {
    "preset": "primary",
    "size": "m",
    "type": "button",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Button": Object {
      "iconAfter": Object {
        "children": Object {
          "style": Object {
            "pr": 12,
          },
        },
      },
      "iconBefore": Object {
        "children": Object {
          "style": Object {
            "pl": 12,
          },
        },
      },
      "kind": Object {
        "fill": Object {
          "style": Object {
            "bg": "blue50",
            "bgActive": "blue70",
            "bgChecked": "blue70",
            "bgDisabled": "blue30",
            "bgHover": "blue60",
            "color": "white",
            "colorDisabled": "gray30",
          },
          "variant": Object {
            "error": Object {
              "style": Object {
                "bg": "red50",
                "bgActive": "red70",
                "bgChecked": "red70",
                "bgDisabled": "red30",
                "bgHover": "red60",
              },
            },
            "primary": Object {
              "style": Object {
                "bg": "blue50",
                "bgActive": "blue70",
                "bgChecked": "blue70",
                "bgDisabled": "blue30",
                "bgHover": "blue60",
              },
            },
            "secondary": Object {
              "style": Object {
                "bg": "gray50",
                "bgActive": "gray70",
                "bgChecked": "gray70",
                "bgDisabled": "gray30",
                "bgHover": "gray60",
                "color": "black",
                "colorDisabled": "gray70",
              },
            },
            "success": Object {
              "style": Object {
                "bg": "green50",
                "bgActive": "green70",
                "bgChecked": "green70",
                "bgDisabled": "green30",
                "bgHover": "green60",
              },
            },
            "warning": Object {
              "style": Object {
                "bg": "yellow50",
                "bgActive": "yellow70",
                "bgChecked": "yellow70",
                "bgDisabled": "yellow30",
                "bgHover": "yellow60",
                "color": "black",
                "colorDisabled": "gray70",
              },
            },
          },
        },
        "flat": Object {
          "style": Object {
            "bg": "gray30",
            "bgActive": "gray50",
            "bgChecked": "gray30",
            "bgHover": "gray40",
            "borderColor": "gray30",
            "borderColorActive": "gra50",
            "borderColorDisabled": "gray20",
            "borderColorHover": "gray40",
          },
          "variant": Object {
            "error": Object {
              "style": Object {
                "color": "red50",
                "colorActive": "red70",
                "colorDisabled": "red30",
                "colorHover": "red60",
              },
            },
            "primary": Object {
              "style": Object {
                "color": "blue50",
                "colorActive": "blue70",
                "colorDisabled": "blue30",
                "colorHover": "blue60",
              },
            },
            "secondary": Object {
              "style": Object {
                "color": "gray50",
                "colorActive": "gray70",
                "colorDisabled": "gray30",
                "colorHover": "gray60",
              },
            },
            "success": Object {
              "style": Object {
                "color": "green50",
                "colorActive": "green70",
                "colorDisabled": "green30",
                "colorHover": "green60",
              },
            },
            "warning": Object {
              "style": Object {
                "color": "yellow50",
                "colorActive": "yellow70",
                "colorDisabled": "yellow30",
                "colorHover": "yellow60",
              },
            },
          },
        },
        "outline": Object {
          "style": Object {
            "bg": "gray32",
            "bgActive": "gray52",
            "bgChecked": "gray32",
            "bgHover": "gray40",
            "borderColor": "gray32",
            "borderColorActive": "gra52",
            "borderColorDisabled": "gray24",
            "borderColorHover": "gray40",
          },
          "variant": Object {
            "error": Object {
              "style": Object {
                "color": "red50",
                "colorActive": "red70",
                "colorDisabled": "red30",
                "colorHover": "red60",
              },
            },
            "primary": Object {
              "checked": Object {
                "style": Object {
                  "bg": "red300",
                  "color": "red500",
                  "colorActive": "red700",
                  "colorDisabled": "red300",
                  "colorHover": "red600",
                },
              },
              "style": Object {
                "color": "blue500",
                "colorActive": "blue700",
                "colorDisabled": "blue300",
                "colorHover": "blue600",
              },
            },
            "secondary": Object {
              "style": Object {
                "color": "gray50",
                "colorActive": "gray70",
                "colorDisabled": "gray30",
                "colorHover": "gray60",
              },
            },
            "success": Object {
              "style": Object {
                "color": "green50",
                "colorActive": "green70",
                "colorDisabled": "green30",
                "colorHover": "green60",
              },
            },
            "warning": Object {
              "style": Object {
                "color": "yellow50",
                "colorActive": "yellow70",
                "colorDisabled": "yellow30",
                "colorHover": "yellow60",
              },
            },
          },
        },
      },
      "preset": Object {
        "accent": Object {
          "style": Object {
            "bg": "green500",
            "bgActive": "green800",
            "bgDisabled": "gray4",
            "color": "white",
            "colorDisabled": "gray48",
          },
        },
        "appInstall": Object {
          "style": Object {
            "bg": "gray4",
            "bgActive": "gray8",
            "bgDisabled": "gray4",
            "color": "blue500",
            "colorDisabled": "gray48",
          },
        },
        "default": Object {
          "checked": Object {
            "style": Object {
              "bg": "blue500",
              "bgActive": "blue800",
              "bgDisabled": "blue300",
              "color": "white",
              "colorDisabled": "blue50",
            },
          },
          "style": Object {
            "bg": "gray4",
            "bgActive": "gray8",
            "bgDisabled": "gray4",
            "color": "black",
            "colorDisabled": "gray48",
          },
        },
        "defaultDark": Object {
          "style": Object {
            "bg": "gray68",
            "bgActive": "gray76",
            "bgDisabled": "gray76",
            "color": "white",
            "colorDisabled": "gray40",
          },
        },
        "defaultOnSurface": Object {
          "style": Object {
            "bg": "gray8",
            "bgActive": "gray12",
            "bgDisabled": "gray8",
            "color": "black",
            "colorDisabled": "gray48",
          },
        },
        "linkIncreased": Object {
          "style": Object {
            "bg": "white",
            "bgActive": "gray4",
            "bgDisabled": "white",
            "color": "blue500",
            "colorDisabled": "gray40",
          },
        },
        "outline": Object {
          "style": Object {
            "bg": "white",
            "bgActive": "gray8",
            "borderColor": "gray8",
            "color": "black",
            "colorDisabled": "gray48",
          },
        },
        "pay": Object {
          "style": Object {
            "bg": "black",
            "bgActive": "gray76",
            "bgDisabled": "gray68",
            "color": "white",
            "colorDisabled": "gray40",
          },
        },
        "primary": Object {
          "style": Object {
            "bg": "blue500",
            "bgActive": "blue600",
            "bgChecked": "blue600",
            "bgDisabled": "blue300",
            "color": "white",
            "colorDisabled": "blue50",
          },
        },
        "secondary": Object {
          "style": Object {
            "bg": "blue50",
            "bgActive": "blue100",
            "bgDisabled": "gray4",
            "color": "blue500",
            "colorDisabled": "gray48",
          },
        },
      },
      "size": Object {
        "l": Object {
          "style": Object {
            "minHeight": "l",
            "py": 8,
          },
        },
        "m": Object {
          "style": Object {
            "minHeight": "m",
            "py": 6,
          },
        },
        "s": Object {
          "style": Object {
            "minHeight": "s",
            "py": 4,
          },
        },
      },
      "style": Object {
        "borderColor": "transparent",
        "borderRadius": 3,
        "borderStyle": "solid",
        "borderWidth": 1,
        "focus": false,
        "px": 16,
      },
    },
    "IconAfter": Object {
      "size": Object {
        "l": Object {
          "props": Object {
            "size": "m",
          },
        },
        "m": Object {
          "props": Object {
            "size": "s",
          },
        },
        "s": Object {
          "props": Object {
            "size": "s",
          },
        },
      },
    },
    "IconBefore": Object {
      "size": Object {
        "l": Object {
          "props": Object {
            "size": "m",
          },
        },
        "m": Object {
          "props": Object {
            "size": "s",
          },
        },
        "s": Object {
          "props": Object {
            "size": "s",
          },
        },
      },
    },
    "Spinner": Object {
      "size": Object {
        "l": Object {
          "props": Object {
            "size": "l",
          },
        },
        "m": Object {
          "props": Object {
            "size": "m",
          },
        },
        "s": Object {
          "props": Object {
            "size": "s",
          },
        },
      },
    },
    "Text": Object {
      "iconAfter": Object {
        "props": Object {
          "mr": 6,
        },
      },
      "iconBefore": Object {
        "props": Object {
          "ml": 6,
        },
      },
      "kind": Object {
        "flat": Object {
          "props": Object {
            "uppercase": true,
          },
        },
      },
      "props": Object {
        "crop": true,
        "dense": true,
        "ml": -1,
        "size": "m",
        "valignSelf": "middle",
      },
    },
  },
}
`;

exports[`mobile theme checkbox fuzz: {"variant":"error","checked":false,"shape":"circle"} 1`] = `
Object {
  "Icon": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray8",
      "bgActive": "gray12",
      "bgDisabled": "gray4",
      "borderRadius": 2,
      "color": "white",
      "height": 20,
      "p": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme checkbox fuzz: {"variant":"error","checked":false,"shape":"square"} 1`] = `
Object {
  "Icon": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray8",
      "bgActive": "gray12",
      "bgDisabled": "gray4",
      "borderRadius": 2,
      "color": "white",
      "height": 18,
      "mx": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme checkbox fuzz: {"variant":"error","checked":true,"shape":"circle"} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "red500",
      "bgActive": "red700",
      "bgDisabled": "gray28",
      "borderRadius": 2,
      "color": "white",
      "height": 20,
      "p": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme checkbox fuzz: {"variant":"error","checked":true,"shape":"square"} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "red500",
      "bgActive": "red700",
      "bgDisabled": "gray28",
      "borderRadius": 2,
      "color": "white",
      "height": 18,
      "mx": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme checkbox fuzz: {"variant":"primary","checked":false,"shape":"circle"} 1`] = `
Object {
  "Icon": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray8",
      "bgActive": "gray12",
      "bgDisabled": "gray4",
      "borderRadius": 2,
      "color": "white",
      "height": 20,
      "p": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme checkbox fuzz: {"variant":"primary","checked":false,"shape":"square"} 1`] = `
Object {
  "Icon": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray8",
      "bgActive": "gray12",
      "bgDisabled": "gray4",
      "borderRadius": 2,
      "color": "white",
      "height": 18,
      "mx": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme checkbox fuzz: {"variant":"primary","checked":true,"shape":"circle"} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "blue500",
      "bgActive": "blue700",
      "bgDisabled": "gray28",
      "borderRadius": 2,
      "color": "white",
      "height": 20,
      "p": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme checkbox fuzz: {"variant":"primary","checked":true,"shape":"square"} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "blue500",
      "bgActive": "blue700",
      "bgDisabled": "gray28",
      "borderRadius": 2,
      "color": "white",
      "height": 18,
      "mx": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme checkbox fuzz: {"variant":"secondary","checked":false,"shape":"circle"} 1`] = `
Object {
  "Icon": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray8",
      "bgActive": "gray12",
      "bgDisabled": "gray4",
      "borderRadius": 2,
      "color": "white",
      "height": 20,
      "p": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme checkbox fuzz: {"variant":"secondary","checked":false,"shape":"square"} 1`] = `
Object {
  "Icon": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray8",
      "bgActive": "gray12",
      "bgDisabled": "gray4",
      "borderRadius": 2,
      "color": "white",
      "height": 18,
      "mx": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme checkbox fuzz: {"variant":"secondary","checked":true,"shape":"circle"} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray48",
      "bgActive": "gray56",
      "bgDisabled": "gray28",
      "borderRadius": 2,
      "color": "white",
      "height": 20,
      "p": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme checkbox fuzz: {"variant":"secondary","checked":true,"shape":"square"} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray48",
      "bgActive": "gray56",
      "bgDisabled": "gray28",
      "borderRadius": 2,
      "color": "white",
      "height": 18,
      "mx": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme checkbox fuzz: {"variant":"success","checked":false,"shape":"circle"} 1`] = `
Object {
  "Icon": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray8",
      "bgActive": "gray12",
      "bgDisabled": "gray4",
      "borderRadius": 2,
      "color": "white",
      "height": 20,
      "p": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme checkbox fuzz: {"variant":"success","checked":false,"shape":"square"} 1`] = `
Object {
  "Icon": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray8",
      "bgActive": "gray12",
      "bgDisabled": "gray4",
      "borderRadius": 2,
      "color": "white",
      "height": 18,
      "mx": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme checkbox fuzz: {"variant":"success","checked":true,"shape":"circle"} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "green500",
      "bgActive": "green700",
      "bgDisabled": "gray28",
      "borderRadius": 2,
      "color": "white",
      "height": 20,
      "p": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme checkbox fuzz: {"variant":"success","checked":true,"shape":"square"} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "green500",
      "bgActive": "green700",
      "bgDisabled": "gray28",
      "borderRadius": 2,
      "color": "white",
      "height": 18,
      "mx": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme checkbox fuzz: {"variant":"warning","checked":false,"shape":"circle"} 1`] = `
Object {
  "Icon": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray8",
      "bgActive": "gray12",
      "bgDisabled": "gray4",
      "borderRadius": 2,
      "color": "white",
      "height": 20,
      "p": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme checkbox fuzz: {"variant":"warning","checked":false,"shape":"square"} 1`] = `
Object {
  "Icon": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray8",
      "bgActive": "gray12",
      "bgDisabled": "gray4",
      "borderRadius": 2,
      "color": "white",
      "height": 18,
      "mx": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme checkbox fuzz: {"variant":"warning","checked":true,"shape":"circle"} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "orange500",
      "bgActive": "orange700",
      "bgDisabled": "gray28",
      "borderRadius": 2,
      "color": "white",
      "height": 20,
      "p": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme checkbox fuzz: {"variant":"warning","checked":true,"shape":"square"} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "orange500",
      "bgActive": "orange700",
      "bgDisabled": "gray28",
      "borderRadius": 2,
      "color": "white",
      "height": 18,
      "mx": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme checkbox snap 1`] = `
Object {
  "defaultProps": Object {
    "labelPosition": "end",
    "shape": "square",
    "size": "m",
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Icon": Object {
      "checked": Object {
        "component": [Function],
      },
      "indeterminate": Object {
        "component": [Function],
      },
    },
    "Label": Object {
      "disabled": Object {
        "props": Object {
          "color": "gray48",
        },
      },
      "labelPosition": Object {
        "end": Object {
          "props": Object {
            "ml": 16,
          },
        },
        "start": Object {
          "props": Object {
            "mr": 16,
          },
        },
      },
      "props": Object {
        "size": "m",
      },
    },
    "Switch": Object {
      "checked": Object {
        "style": Object {
          "bgDisabled": "gray28",
        },
        "variant": Object {
          "error": Object {
            "style": Object {
              "bg": "red500",
              "bgActive": "red700",
            },
          },
          "primary": Object {
            "style": Object {
              "bg": "blue500",
              "bgActive": "blue700",
            },
          },
          "secondary": Object {
            "style": Object {
              "bg": "gray48",
              "bgActive": "gray56",
            },
          },
          "success": Object {
            "style": Object {
              "bg": "green500",
              "bgActive": "green700",
            },
          },
          "warning": Object {
            "style": Object {
              "bg": "orange500",
              "bgActive": "orange700",
            },
          },
        },
      },
      "shape": Object {
        "circle": Object {
          "style": Object {
            "height": 20,
            "p": 1,
          },
        },
        "square": Object {
          "style": Object {
            "mx": 1,
          },
        },
      },
      "style": Object {
        "bg": "gray8",
        "bgActive": "gray12",
        "bgDisabled": "gray4",
        "borderRadius": 2,
        "color": "white",
        "height": 18,
      },
    },
    "Toggle": Object {},
  },
}
`;

exports[`mobile theme input theme snap 1`] = `
Object {
  "defaultProps": Object {
    "kind": "fill",
    "size": "m",
    "variant": "primary",
  },
  "deletePlaceholderOnFocus": true,
  "mapProps": [Function],
  "scheme": Object {
    "IconAfter": Object {
      "clearable": Object {
        "component": [Function],
        "props": Object {
          "area": 10,
        },
      },
      "props": Object {
        "color": "gray28",
      },
      "size": Object {
        "l": Object {
          "props": Object {
            "mx": 10,
            "size": "m",
          },
        },
        "m": Object {
          "props": Object {
            "mx": 10,
            "size": "s",
          },
        },
        "s": Object {
          "props": Object {
            "mx": 8,
            "size": "s",
          },
        },
      },
    },
    "IconBefore": Object {
      "props": Object {
        "color": "gray28",
        "ml": 10,
        "mr": 8,
      },
      "size": Object {
        "l": Object {
          "props": Object {
            "size": "m",
          },
        },
        "m": Object {
          "props": Object {
            "size": "s",
          },
        },
        "s": Object {
          "props": Object {
            "size": "s",
          },
        },
      },
    },
    "Input": Object {
      "size": Object {
        "l": Object {
          "style": Object {
            "fontSize": 16,
            "height": "l",
          },
        },
        "m": Object {
          "style": Object {
            "fontSize": 16,
            "height": "m",
          },
        },
        "s": Object {
          "style": Object {
            "fontSize": 12,
            "height": "s",
          },
        },
      },
      "style": Object {
        "borderRadius": 5,
        "color": "black",
        "colorDisabled": "gray40",
        "focus": true,
        "placeholderColor": "gray48",
      },
      "variant": Object {
        "error": Object {
          "style": Object {
            "bg": "red50",
          },
        },
        "primary": Object {
          "style": Object {
            "bg": "gray4",
          },
        },
        "secondary": Object {
          "style": Object {
            "bg": "gray8",
          },
        },
        "success": Object {
          "style": Object {
            "bg": "green50",
          },
        },
        "warning": Object {
          "style": Object {
            "bg": "orange50",
          },
        },
      },
    },
    "InputField": Object {
      "iconAfter": Object {
        "style": Object {
          "pr": "none",
        },
      },
      "iconBefore": Object {
        "style": Object {
          "pl": "none",
        },
      },
      "size": Object {
        "l": Object {
          "style": Object {
            "px": 16,
          },
        },
        "m": Object {
          "style": Object {
            "px": 16,
          },
        },
        "s": Object {
          "style": Object {
            "px": 12,
          },
        },
      },
    },
    "Postfix": Object {
      "props": Object {
        "ml": 4,
      },
    },
    "Prefix": Object {
      "props": Object {
        "mr": 4,
      },
    },
  },
}
`;

exports[`mobile theme radio fuzz: {"variant":"error","checked":false} 1`] = `
Object {
  "Icon": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray8",
      "bgActive": "gray12",
      "bgDisabled": "gray4",
      "color": "white",
      "focus": false,
      "height": 18,
      "mx": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme radio fuzz: {"variant":"error","checked":true} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "red500",
      "bgActive": "red700",
      "bgDisabled": "gray28",
      "color": "white",
      "focus": false,
      "height": 18,
      "mx": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme radio fuzz: {"variant":"primary","checked":false} 1`] = `
Object {
  "Icon": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray8",
      "bgActive": "gray12",
      "bgDisabled": "gray4",
      "color": "white",
      "focus": false,
      "height": 18,
      "mx": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme radio fuzz: {"variant":"primary","checked":true} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "blue500",
      "bgActive": "blue700",
      "bgDisabled": "gray28",
      "color": "white",
      "focus": false,
      "height": 18,
      "mx": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme radio fuzz: {"variant":"secondary","checked":false} 1`] = `
Object {
  "Icon": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray8",
      "bgActive": "gray12",
      "bgDisabled": "gray4",
      "color": "white",
      "focus": false,
      "height": 18,
      "mx": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme radio fuzz: {"variant":"secondary","checked":true} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray48",
      "bgActive": "gray56",
      "bgDisabled": "gray28",
      "color": "white",
      "focus": false,
      "height": 18,
      "mx": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme radio fuzz: {"variant":"success","checked":false} 1`] = `
Object {
  "Icon": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray8",
      "bgActive": "gray12",
      "bgDisabled": "gray4",
      "color": "white",
      "focus": false,
      "height": 18,
      "mx": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme radio fuzz: {"variant":"success","checked":true} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "green500",
      "bgActive": "green700",
      "bgDisabled": "gray28",
      "color": "white",
      "focus": false,
      "height": 18,
      "mx": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme radio fuzz: {"variant":"warning","checked":false} 1`] = `
Object {
  "Icon": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray8",
      "bgActive": "gray12",
      "bgDisabled": "gray4",
      "color": "white",
      "focus": false,
      "height": 18,
      "mx": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme radio fuzz: {"variant":"warning","checked":true} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "orange500",
      "bgActive": "orange700",
      "bgDisabled": "gray28",
      "color": "white",
      "focus": false,
      "height": 18,
      "mx": 1,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme radio snap 1`] = `
Object {
  "defaultProps": Object {
    "labelPosition": "end",
    "shape": "circle",
    "size": "m",
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Icon": Object {
      "checked": Object {
        "component": [Function],
      },
    },
    "Label": Object {
      "disabled": Object {
        "props": Object {
          "color": "gray48",
        },
      },
      "labelPosition": Object {
        "end": Object {
          "props": Object {
            "ml": 16,
          },
        },
        "start": Object {
          "props": Object {
            "mr": 16,
          },
        },
      },
      "props": Object {
        "size": "m",
      },
    },
    "Switch": Object {
      "checked": Object {
        "style": Object {
          "bgDisabled": "gray28",
        },
        "variant": Object {
          "error": Object {
            "style": Object {
              "bg": "red500",
              "bgActive": "red700",
            },
          },
          "primary": Object {
            "style": Object {
              "bg": "blue500",
              "bgActive": "blue700",
            },
          },
          "secondary": Object {
            "style": Object {
              "bg": "gray48",
              "bgActive": "gray56",
            },
          },
          "success": Object {
            "style": Object {
              "bg": "green500",
              "bgActive": "green700",
            },
          },
          "warning": Object {
            "style": Object {
              "bg": "orange500",
              "bgActive": "orange700",
            },
          },
        },
      },
      "style": Object {
        "bg": "gray8",
        "bgActive": "gray12",
        "bgDisabled": "gray4",
        "color": "white",
        "focus": false,
        "height": 18,
        "mx": 1,
      },
    },
    "Toggle": Object {},
  },
}
`;

exports[`mobile theme switcher fuzz: {"variant":"error","checked":false,"loading":false} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray12",
      "bgActive": "gray28",
      "bgDisabled": "gray4",
      "color": "white",
      "focus": true,
      "height": 25,
      "p": 3,
      "width": 48,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme switcher fuzz: {"variant":"error","checked":false,"loading":true} 1`] = `
Object {
  "Icon": Object {
    "component": Object {
      "$$typeof": Symbol(react.forward_ref),
      "displayName": "Spinner",
      "render": [Function],
    },
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "align": "center",
      "bg": "transparent",
      "bgActive": "transparent",
      "bgDisabled": "transparent",
      "color": "gray28",
      "focus": false,
      "height": 25,
      "p": 3,
      "width": 48,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme switcher fuzz: {"variant":"error","checked":true,"loading":false} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "red500",
      "bgActive": "red700",
      "bgDisabled": "gray28",
      "color": "white",
      "focus": true,
      "height": 25,
      "p": 3,
      "width": 48,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme switcher fuzz: {"variant":"error","checked":true,"loading":true} 1`] = `
Object {
  "Icon": Object {
    "component": Object {
      "$$typeof": Symbol(react.forward_ref),
      "displayName": "Spinner",
      "render": [Function],
    },
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "align": "center",
      "bg": "transparent",
      "bgActive": "transparent",
      "bgDisabled": "transparent",
      "color": "gray28",
      "focus": false,
      "height": 25,
      "p": 3,
      "width": 48,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme switcher fuzz: {"variant":"primary","checked":false,"loading":false} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray12",
      "bgActive": "gray28",
      "bgDisabled": "gray8",
      "color": "white",
      "focus": true,
      "height": 25,
      "p": 3,
      "width": 48,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme switcher fuzz: {"variant":"primary","checked":false,"loading":true} 1`] = `
Object {
  "Icon": Object {
    "component": Object {
      "$$typeof": Symbol(react.forward_ref),
      "displayName": "Spinner",
      "render": [Function],
    },
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "align": "center",
      "bg": "transparent",
      "bgActive": "transparent",
      "bgDisabled": "transparent",
      "color": "gray28",
      "focus": false,
      "height": 25,
      "p": 3,
      "width": 48,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme switcher fuzz: {"variant":"primary","checked":true,"loading":false} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "blue500",
      "bgActive": "blue700",
      "bgDisabled": "blue300",
      "color": "white",
      "focus": true,
      "height": 25,
      "p": 3,
      "width": 48,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme switcher fuzz: {"variant":"primary","checked":true,"loading":true} 1`] = `
Object {
  "Icon": Object {
    "component": Object {
      "$$typeof": Symbol(react.forward_ref),
      "displayName": "Spinner",
      "render": [Function],
    },
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "align": "center",
      "bg": "transparent",
      "bgActive": "transparent",
      "bgDisabled": "transparent",
      "color": "gray28",
      "focus": false,
      "height": 25,
      "p": 3,
      "width": 48,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme switcher fuzz: {"variant":"secondary","checked":false,"loading":false} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray12",
      "bgActive": "gray28",
      "bgDisabled": "gray4",
      "color": "white",
      "focus": true,
      "height": 25,
      "p": 3,
      "width": 48,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme switcher fuzz: {"variant":"secondary","checked":false,"loading":true} 1`] = `
Object {
  "Icon": Object {
    "component": Object {
      "$$typeof": Symbol(react.forward_ref),
      "displayName": "Spinner",
      "render": [Function],
    },
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "align": "center",
      "bg": "transparent",
      "bgActive": "transparent",
      "bgDisabled": "transparent",
      "color": "gray28",
      "focus": false,
      "height": 25,
      "p": 3,
      "width": 48,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme switcher fuzz: {"variant":"secondary","checked":true,"loading":false} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray48",
      "bgActive": "gray56",
      "bgDisabled": "gray28",
      "color": "white",
      "focus": true,
      "height": 25,
      "p": 3,
      "width": 48,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme switcher fuzz: {"variant":"secondary","checked":true,"loading":true} 1`] = `
Object {
  "Icon": Object {
    "component": Object {
      "$$typeof": Symbol(react.forward_ref),
      "displayName": "Spinner",
      "render": [Function],
    },
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "align": "center",
      "bg": "transparent",
      "bgActive": "transparent",
      "bgDisabled": "transparent",
      "color": "gray28",
      "focus": false,
      "height": 25,
      "p": 3,
      "width": 48,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme switcher fuzz: {"variant":"success","checked":false,"loading":false} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray12",
      "bgActive": "gray28",
      "bgDisabled": "gray4",
      "color": "white",
      "focus": true,
      "height": 25,
      "p": 3,
      "width": 48,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme switcher fuzz: {"variant":"success","checked":false,"loading":true} 1`] = `
Object {
  "Icon": Object {
    "component": Object {
      "$$typeof": Symbol(react.forward_ref),
      "displayName": "Spinner",
      "render": [Function],
    },
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "align": "center",
      "bg": "transparent",
      "bgActive": "transparent",
      "bgDisabled": "transparent",
      "color": "gray28",
      "focus": false,
      "height": 25,
      "p": 3,
      "width": 48,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme switcher fuzz: {"variant":"success","checked":true,"loading":false} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "green500",
      "bgActive": "green700",
      "bgDisabled": "gray28",
      "color": "white",
      "focus": true,
      "height": 25,
      "p": 3,
      "width": 48,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme switcher fuzz: {"variant":"success","checked":true,"loading":true} 1`] = `
Object {
  "Icon": Object {
    "component": Object {
      "$$typeof": Symbol(react.forward_ref),
      "displayName": "Spinner",
      "render": [Function],
    },
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "align": "center",
      "bg": "transparent",
      "bgActive": "transparent",
      "bgDisabled": "transparent",
      "color": "gray28",
      "focus": false,
      "height": 25,
      "p": 3,
      "width": 48,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme switcher fuzz: {"variant":"warning","checked":false,"loading":false} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "gray12",
      "bgActive": "gray28",
      "bgDisabled": "gray4",
      "color": "white",
      "focus": true,
      "height": 25,
      "p": 3,
      "width": 48,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme switcher fuzz: {"variant":"warning","checked":false,"loading":true} 1`] = `
Object {
  "Icon": Object {
    "component": Object {
      "$$typeof": Symbol(react.forward_ref),
      "displayName": "Spinner",
      "render": [Function],
    },
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "align": "center",
      "bg": "transparent",
      "bgActive": "transparent",
      "bgDisabled": "transparent",
      "color": "gray28",
      "focus": false,
      "height": 25,
      "p": 3,
      "width": 48,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme switcher fuzz: {"variant":"warning","checked":true,"loading":false} 1`] = `
Object {
  "Icon": Object {
    "component": [Function],
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "bg": "orange500",
      "bgActive": "orange700",
      "bgDisabled": "gray28",
      "color": "white",
      "focus": true,
      "height": 25,
      "p": 3,
      "width": 48,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme switcher fuzz: {"variant":"warning","checked":true,"loading":true} 1`] = `
Object {
  "Icon": Object {
    "component": Object {
      "$$typeof": Symbol(react.forward_ref),
      "displayName": "Spinner",
      "render": [Function],
    },
    "props": Object {},
    "style": Object {},
  },
  "Label": Object {
    "component": null,
    "props": Object {
      "size": "m",
    },
    "style": Object {},
  },
  "Switch": Object {
    "component": null,
    "props": Object {},
    "style": Object {
      "align": "center",
      "bg": "transparent",
      "bgActive": "transparent",
      "bgDisabled": "transparent",
      "color": "gray28",
      "focus": false,
      "height": 25,
      "p": 3,
      "width": 48,
    },
  },
  "Toggle": Object {
    "component": null,
    "props": Object {},
    "style": Object {},
  },
}
`;

exports[`mobile theme switcher snap 1`] = `
Object {
  "defaultProps": Object {
    "labelPosition": "end",
    "shape": "pill",
    "size": "m",
    "variant": "primary",
  },
  "mapProps": [Function],
  "scheme": Object {
    "Icon": Object {
      "component": [Function],
      "loading": Object {
        "component": Object {
          "$$typeof": Symbol(react.forward_ref),
          "displayName": "Spinner",
          "render": [Function],
        },
      },
    },
    "Label": Object {
      "disabled": Object {
        "props": Object {
          "color": "gray48",
        },
      },
      "labelPosition": Object {
        "end": Object {
          "props": Object {
            "ml": 16,
          },
        },
        "start": Object {
          "props": Object {
            "mr": 16,
          },
        },
      },
      "props": Object {
        "size": "m",
      },
    },
    "Switch": Object {
      "checked": Object {
        "style": Object {
          "bgDisabled": "gray28",
        },
        "variant": Object {
          "error": Object {
            "style": Object {
              "bg": "red500",
              "bgActive": "red700",
            },
          },
          "primary": Object {
            "style": Object {
              "bg": "blue500",
              "bgActive": "blue700",
              "bgDisabled": "blue300",
            },
          },
          "secondary": Object {
            "style": Object {
              "bg": "gray48",
              "bgActive": "gray56",
            },
          },
          "success": Object {
            "style": Object {
              "bg": "green500",
              "bgActive": "green700",
            },
          },
          "warning": Object {
            "style": Object {
              "bg": "orange500",
              "bgActive": "orange700",
            },
          },
        },
      },
      "loading": Object {
        "style": Object {
          "align": "center",
          "bg": "transparent",
          "bgActive": "transparent",
          "bgDisabled": "transparent",
          "color": "gray28",
          "focus": false,
        },
      },
      "style": Object {
        "bg": "gray12",
        "bgActive": "gray28",
        "bgDisabled": "gray4",
        "color": "white",
        "focus": true,
        "height": 25,
        "p": 3,
        "width": 48,
      },
      "variant": Object {
        "primary": Object {
          "style": Object {
            "bgDisabled": "gray8",
          },
        },
      },
    },
    "Toggle": Object {},
  },
}
`;

exports[`mobile theme text theme snap 1`] = `
Object {
  "mapProps": [Function],
  "scheme": Object {
    "Text": Object {
      "dense": Object {
        "style": Object {
          "lineHeight": "dense",
        },
      },
      "style": Object {
        "fontSize": [Function],
        "lineHeight": "normal",
      },
      "variant": Object {
        "error": Object {
          "style": Object {
            "color": "red500",
          },
        },
        "primary": Object {
          "style": Object {
            "color": "blue500",
          },
        },
        "secondary": Object {
          "style": Object {
            "color": "gray52",
          },
        },
        "success": Object {
          "style": Object {
            "color": "green500",
          },
        },
        "warning": Object {
          "style": Object {
            "color": "yellow500",
          },
        },
      },
    },
  },
}
`;
